finished cartesian and union methods
finished cartesian and union methods